Made Live projects UI Better.

--- a/index.html
+++ b/index.html
@@ -43,12 +43,74 @@
   
 <div class="container-fluid bg-3 text-center">    
   <h1 class="headings">Latest Live Projects</h1><br>
+
+  <!-- First row -- Live Project -->
   <div class="row">
-    <div class="col-md-5">
-      <img src="https://via.placeholder.com/375x212" alt="" class="detail-img">
+    <div class="col-md-5 col-sm-5">
+      <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
     </div>
-    <div class="col-md-7">
-      <h2 class="sub-headings">Doodle Live</h2>
+    <div class="col-md-7 col-sm-7">
+      <h2 class="sub-headings">Doodle Live: Host Live Meetings</h2>
+      <p class="details">Collaborate with unlimited users to share your ideas and take your teamwork to the Next Level. Work together anywhere, anytime!</p>
+      <p class="details"><strong>Main Features</strong><br>
+      <ul>
+        <li>
+          Host Meetings with unlimited users.
+        </li>
+        <li>
+          Sketch & Share.
+        </li>
+        <li>
+          Live Chat Integration.
+        </li>
+        <li>
+          Share notes with our rich text editor.
+        </li>
+        <li>
+          Live code with Automatic Syntax Highlighting.
+        </li>
+      </ul></p>
+      <p class="details"><strong>Technologies</strong><br>
+      Node JS, Express JS, React JS, Sockets IO</p>
+      <a href="" class="detail-links btn-success" target="_blank">Live Demo</a>
+      <a href="" class="detail-links btn-primary" target="_blank">GitHub Project</a>
+    </div>
+  </div>
+
+  <!-- Next row -- Live Project -->
+  <div class="row row-reverse">
+    <div class="col-md-5 col-sm-5">
+      <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
+    </div>
+    <div class="col-md-7 col-sm-7">
+      <h2 class="sub-headings">Buddies: Your Personal Assistant</h2>
+      <p class="details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo voluptate quidem consequatur qui temporibus, illum modi deleniti veritatis, beatae natus dolore itaque corporis. Numquam tempore natus architecto accusamus? Magnam, corporis.</p>
+      <p class="details"><strong>Main Features</strong><br>
+      <ul>
+        <li>
+          Feature one
+        </li>
+        <li>
+          Feature two
+        </li>
+        <li>
+          Feature three
+        </li>
+      </ul></p>
+      <p class="details"><strong>Technologies</strong><br>
+      Node JS, Express JS, React JS, Sockets IO</p>
+      <a href="" class="detail-links btn-success" target="_blank">Live Demo</a>
+      <a href="" class="detail-links btn-primary" target="_blank">GitHub Project</a>
+    </div>
+  </div>
+
+  <!-- Next row -- Live Project -->
+  <div class="row">
+    <div class="col-md-5 col-sm-5">
+      <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
+    </div>
+    <div class="col-md-7 col-sm-7">
+      <h2 class="sub-headings">Buddies: Your Personal Assistant</h2>
       <p class="details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo voluptate quidem consequatur qui temporibus, illum modi deleniti veritatis, beatae natus dolore itaque corporis. Numquam tempore natus architecto accusamus? Magnam, corporis.</p>
       <p class="details"><strong>Main Features</strong><br>
       <ul>
