Added DOM manipulation for live project section.

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   </div>
 </div>
   
-<div class="container-fluid bg-3 text-center">    
+<div class="container-fluid text-center live-project-section">
   <h1 class="headings">Latest Live Projects</h1><br>
 
   <!-- First row -- Live Project -->
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-5 col-sm-5">
       <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
     </div>
@@ -72,64 +72,10 @@
       </ul></p>
       <p class="details"><strong>Technologies</strong><br>
       Node JS, Express JS, React JS, Sockets IO</p>
-      <a href="" class="detail-links btn-success" target="_blank">Live Demo</a>
-      <a href="" class="detail-links btn-primary" target="_blank">GitHub Project</a>
+      <a href="https://doodlelive.herokuapp.com" class="detail-links btn-success" target="_blank">Live Demo</a>
+      <a href="https://github.com/chingu-voyages/v8-bears-team-05/" class="detail-links btn-primary" target="_blank">GitHub Project</a>
     </div>
-  </div>
-
-  <!-- Next row -- Live Project -->
-  <div class="row row-reverse">
-    <div class="col-md-5 col-sm-5">
-      <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
-    </div>
-    <div class="col-md-7 col-sm-7">
-      <h2 class="sub-headings">Buddies: Your Personal Assistant</h2>
-      <p class="details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo voluptate quidem consequatur qui temporibus, illum modi deleniti veritatis, beatae natus dolore itaque corporis. Numquam tempore natus architecto accusamus? Magnam, corporis.</p>
-      <p class="details"><strong>Main Features</strong><br>
-      <ul>
-        <li>
-          Feature one
-        </li>
-        <li>
-          Feature two
-        </li>
-        <li>
-          Feature three
-        </li>
-      </ul></p>
-      <p class="details"><strong>Technologies</strong><br>
-      Node JS, Express JS, React JS, Sockets IO</p>
-      <a href="" class="detail-links btn-success" target="_blank">Live Demo</a>
-      <a href="" class="detail-links btn-primary" target="_blank">GitHub Project</a>
-    </div>
-  </div>
-
-  <!-- Next row -- Live Project -->
-  <div class="row">
-    <div class="col-md-5 col-sm-5">
-      <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
-    </div>
-    <div class="col-md-7 col-sm-7">
-      <h2 class="sub-headings">Buddies: Your Personal Assistant</h2>
-      <p class="details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo voluptate quidem consequatur qui temporibus, illum modi deleniti veritatis, beatae natus dolore itaque corporis. Numquam tempore natus architecto accusamus? Magnam, corporis.</p>
-      <p class="details"><strong>Main Features</strong><br>
-      <ul>
-        <li>
-          Feature one
-        </li>
-        <li>
-          Feature two
-        </li>
-        <li>
-          Feature three
-        </li>
-      </ul></p>
-      <p class="details"><strong>Technologies</strong><br>
-      Node JS, Express JS, React JS, Sockets IO</p>
-      <a href="" class="detail-links btn-success" target="_blank">Live Demo</a>
-      <a href="" class="detail-links btn-primary" target="_blank">GitHub Project</a>
-    </div>
-  </div>
+  </div> -->
 </div><br>
 
 <footer class="container-fluid text-center">
@@ -139,6 +85,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <script src="./js/style.js"></script>
+<script src="./js/sections/live_projects.js"></script>
 
 </body>
 </html>
