--- a/index.html
+++ b/index.html
@@ -78,14 +78,20 @@
   </div> -->
 </div><br>
 
+<div class="container-fluid text-center freelance-work-section">
+  <h1 class="headings">Freelance Work</h1><br>
+
+</div><br>
+
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<script src="./js/style.js"></script>
 <script src="./js/sections/live_projects.js"></script>
+<script src="./js/sections/freelance_work.js"></script>
+<script src="./js/style.js"></script>
 
 </body>
 </html>
