Added Skills section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -41,6 +41,7 @@
   </div>
 </div>
   
+<!-- Latest Live Projects Section -->
 <div class="container-fluid text-center live-project-section">
   <h1 class="headings">Latest Live Projects</h1><br>
 
@@ -78,9 +79,18 @@
   </div> -->
 </div><br>
 
+<!-- Freelance Work Section -->
 <div class="container-fluid text-center freelance-work-section">
   <h1 class="headings">Freelance Work</h1><br>
 
+</div><br>
+
+<!-- Skills Section -->
+<div class="container-fluid text-center">
+  <h1 class="headings">My Skills</h1><br>
+  <div class="row skills-section">
+
+  </div>    
 </div><br>
 
 <footer class="container-fluid text-center">
@@ -91,6 +101,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <script src="./js/sections/live_projects.js"></script>
 <script src="./js/sections/freelance_work.js"></script>
+<script src="./js/sections/skills.js"></script>
 <script src="./js/style.js"></script>
 
 </body>
