--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
   </div>    
 </div><br>
 
+<!-- Blogs Section -->
+<div class="container-fluid text-center">
+  <h1 class="headings">My Top Blogs</h1><br>
+  <div class="row blogs-section">
+    
+  </div>    
+</div><br>
+
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
@@ -102,6 +110,7 @@
 <script src="./js/sections/live_projects.js"></script>
 <script src="./js/sections/freelance_work.js"></script>
 <script src="./js/sections/skills.js"></script>
+<script src="./js/sections/blogs.js"></script>
 <script src="./js/style.js"></script>
 
 </body>
