Added navbar navigation

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="">Home</a></li>
+        <li><a href="#projects">Live Projects</a></li>
+        <li><a href="#freelance">Freelance Work</a></li>
+        <li><a href="#skills">My Skills</a></li>
+        <li><a href="#blogs">My Blogs</a></li>
       </ul>
     </div>
   </div>
@@ -42,8 +43,8 @@
 </div>
   
 <!-- Latest Live Projects Section -->
+<a name="projects"><h1 class="headings">Live Projects</h1></a><br>
 <div class="container-fluid text-center live-project-section">
-  <h1 class="headings">Latest Live Projects</h1><br>
 
   <!-- First row -- Live Project -->
   <!-- <div class="row">
@@ -80,22 +81,22 @@
 </div><br>
 
 <!-- Freelance Work Section -->
+<a name="freelance"><h1 class="headings">Freelance Work</h1></a><br>
 <div class="container-fluid text-center freelance-work-section">
-  <h1 class="headings">Freelance Work</h1><br>
 
 </div><br>
 
 <!-- Skills Section -->
+<a name="skills"><h1 class="headings">My Skills</h1></a><br>
 <div class="container-fluid text-center">
-  <h1 class="headings">My Skills</h1><br>
   <div class="row skills-section">
 
   </div>    
 </div><br>
 
 <!-- Blogs Section -->
+<a name="blogs"><h1 class="headings">My Top Blogs</h1></a><br>
 <div class="container-fluid text-center">
-  <h1 class="headings">My Top Blogs</h1><br>
   <div class="row blogs-section">
     
   </div>    
