--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Rishabh's Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -32,6 +32,7 @@
 </nav>
 
 <div class="jumbotron">
+  <div id="particles-js"></div>
   <div class="container text-center">
     <h1>My Portfolio</h1>      
     <p>Some text that represents "Me"...</p>
@@ -41,7 +42,7 @@
     <a href="http://bit.ly/rishabh-cv-may19" class="intro-links" target="_blank">My CV (Drive Link)</a>
   </div>
 </div>
-  
+
 <!-- Latest Live Projects Section -->
 <a name="projects"><h1 class="headings">Live Projects</h1></a><br>
 <div class="container-fluid text-center live-project-section">
@@ -108,6 +109,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+<script src="./js/particles.min.js"></script>
+<script src="./js/app.js"></script>
+
 <script src="./js/sections/live_projects.js"></script>
 <script src="./js/sections/freelance_work.js"></script>
 <script src="./js/sections/skills.js"></script>
