--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Rishabh's Portfolio</title>
   <meta charset="utf-8">
+  <meta name="theme-color" content="#3C2F1D">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
