--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <div class="jumbotron">
   <div id="particles-js"></div>
   <div class="container text-center">
-    <h1>My Portfolio</h1>      
-    <p>Some text that represents "Me"...</p>
+    <h1>Hello, I'm Rishabh Agrawal.</h1>
+    <h3>I'm a self-taught full-stack web developer from India.</h3>
   </div>
   <div class="text-center links">
     <a href="https://github.com/techcatchers" class="intro-links" target="_blank">My GitHub Profile</a>
@@ -104,6 +104,7 @@
   </div>    
 </div><br>
 
+<div class="arrow"></div>
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
