Added footer section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#3C2F1D">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Maiden+Orange&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -106,8 +107,19 @@
 </div><br>
 
 <div class="arrow"></div>
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
+<footer class="container-fluid">
+  <div class="about">
+    <h1 class="sub-headings">About Me</h1>
+    <p class="details">I am a self-Taught Software Developer from India who has worked on several different projects for solving real-life problems. I have worked as a Freelancer and created web templates and software for my clients. I often contribute to the open-source community and have learned the best practices to write clean code.</p>
+  </div>
+  <div class="contact">
+    <h1 class="sub-headings">Contact</h1>
+    <p class="details">You can reach me up at <a href="mailto:rishabha.1999@gmail.com?Subject=Hello%20Rishabh" target="_top">rishabha.1999@gmail.com</a></p>
+    <a href="https://www.linkedin.com/in/rishabh-agrawal-48511967" target="_blank"><i class="fab fa-linkedin-in icon"></i></a>
+    <a href="https://medium.com/@codedrishabh" target="_blank"><i class="fab fa-medium-m icon"></i></a>
+    <a href="https://www.hackerrank.com/rishabha_1999" target="_blank"><i class="fab fa-hackerrank icon"></i></a>
+    <a href="https://www.facebook.com/rishabh.agrawal.7798" target="_blank"><i class="fab fa-facebook-f icon"></i></a>
+  </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
