--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </div>
   <div class="contact">
     <h1 class="sub-headings">Contact</h1>
-    <p class="details">You can reach me up at <a href="mailto:rishabha.1999@gmail.com?Subject=Hello%20Rishabh" target="_top">rishabha.1999@gmail.com</a></p>
+    <p class="details">You can reach me up at <a href="mailto:rishabha.1999@gmail.com?subject=Hello%20Rishabh" target="_top">rishabha.1999@gmail.com</a></p>
     <a href="https://www.linkedin.com/in/rishabh-agrawal-48511967" target="_blank"><i class="fab fa-linkedin-in icon"></i></a>
     <a href="https://medium.com/@codedrishabh" target="_blank"><i class="fab fa-medium-m icon"></i></a>
     <a href="https://www.hackerrank.com/rishabha_1999" target="_blank"><i class="fab fa-hackerrank icon"></i></a>
