--- a/index.html
+++ b/index.html
@@ -1,57 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Rishabh's Portfolio</title>
-  <meta charset="utf-8">
-  <meta name="theme-color" content="#3C2F1D">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='icon' href='favicon.ico' type='image/x-icon' />
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Maiden+Orange&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+  <head>
+    <title>Rishabh's Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#3C2F1D" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bree+Serif|Maiden+Orange&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target="#myNavbar"
+          >
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href=""
+            ><img src="./images/Current DP.jpg" class="nav-img" alt=""
+          /></a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#projects">Live Projects</a></li>
+            <li><a href="#freelance">Freelance Work</a></li>
+            <li><a href="#skills">My Skills</a></li>
+            <li><a href="#blogs">My Blogs</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<nav class="navbar navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a href=""><img src="./images/Current DP.jpg" class="nav-img" alt=""></a>
+    <div class="jumbotron">
+      <div id="particles-js"></div>
+      <div class="container text-center">
+        <h1>Hello, I'm Rishabh Agrawal.</h1>
+        <h3>I'm a self-taught full-stack web developer from India.</h3>
+      </div>
+      <div class="text-center links">
+        <a
+          href="https://github.com/techcatchers"
+          class="intro-links"
+          target="_blank"
+          >My GitHub Profile</a
+        >
+        <a
+          href="http://bit.ly/rishabh-cv-may19"
+          class="intro-links"
+          target="_blank"
+          >My CV (Drive Link)</a
+        >
+      </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#projects">Live Projects</a></li>
-        <li><a href="#freelance">Freelance Work</a></li>
-        <li><a href="#skills">My Skills</a></li>
-        <li><a href="#blogs">My Blogs</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
-<div class="jumbotron">
-  <div id="particles-js"></div>
-  <div class="container text-center">
-    <h1>Hello, I'm Rishabh Agrawal.</h1>
-    <h3>I'm a self-taught full-stack web developer from India.</h3>
-  </div>
-  <div class="text-center links">
-    <a href="https://github.com/techcatchers" class="intro-links" target="_blank">My GitHub Profile</a>
-    <a href="http://bit.ly/rishabh-cv-may19" class="intro-links" target="_blank">My CV (Drive Link)</a>
-  </div>
-</div>
-
-<!-- Latest Live Projects Section -->
-<a name="projects"><h1 class="headings">Live Projects</h1></a><br>
-<div class="container-fluid text-center live-project-section">
-
-  <!-- First row -- Live Project -->
-  <!-- <div class="row">
+    <!-- Latest Live Projects Section -->
+    <a name="projects"><h1 class="headings">Live Projects</h1></a><br />
+    <div class="container-fluid text-center live-project-section">
+      <!-- First row -- Live Project -->
+      <!-- <div class="row">
     <div class="col-md-5 col-sm-5">
       <img src="https://via.placeholder.com/300x212" alt="" class="detail-img">
     </div>
@@ -82,57 +105,77 @@
       <a href="https://github.com/chingu-voyages/v8-bears-team-05/" class="detail-links btn-primary" target="_blank">GitHub Project</a>
     </div>
   </div> -->
-</div><br>
+    </div>
+    <br />
 
-<!-- Freelance Work Section -->
-<a name="freelance"><h1 class="headings">Freelance Work</h1></a><br>
-<div class="container-fluid text-center freelance-work-section">
+    <!-- Freelance Work Section -->
+    <a name="freelance"><h1 class="headings">Freelance Work</h1></a><br />
+    <div class="container-fluid text-center freelance-work-section"></div>
+    <br />
 
-</div><br>
+    <!-- Skills Section -->
+    <a name="skills"><h1 class="headings">My Skills</h1></a><br />
+    <div class="container-fluid text-center">
+      <div class="row skills-section"></div>
+    </div>
+    <br />
 
-<!-- Skills Section -->
-<a name="skills"><h1 class="headings">My Skills</h1></a><br>
-<div class="container-fluid text-center">
-  <div class="row skills-section">
+    <!-- Blogs Section -->
+    <a name="blogs"><h1 class="headings">My Top Blogs</h1></a><br />
+    <div class="container-fluid text-center">
+      <div class="row blogs-section"></div>
+    </div>
+    <br />
 
-  </div>    
-</div><br>
+    <div class="arrow"></div>
+    <footer class="container-fluid">
+      <div class="about">
+        <h1 class="sub-headings">About Me</h1>
+        <p class="details">
+          I am a self-Taught Software Developer from India who has worked on
+          several different projects for solving real-life problems. I have
+          worked as a Freelancer and created web templates and software for my
+          clients. I often contribute to the open-source community and have
+          learned the best practices to write clean code.
+        </p>
+      </div>
+      <div class="contact">
+        <h1 class="sub-headings">Contact</h1>
+        <p class="details">
+          You can reach me up at
+          <a
+            href="mailto:rishabha.1999@gmail.com?subject=Hello%20Rishabh"
+            target="_top"
+            >rishabha.1999@gmail.com</a
+          >
+        </p>
+        <a
+          href="https://www.linkedin.com/in/rishabh-agrawal-48511967"
+          target="_blank"
+          ><i class="fab fa-linkedin-in icon"></i
+        ></a>
+        <a href="https://medium.com/@codedrishabh" target="_blank"
+          ><i class="fab fa-medium-m icon"></i
+        ></a>
+        <a href="https://www.hackerrank.com/rishabha_1999" target="_blank"
+          ><i class="fab fa-hackerrank icon"></i
+        ></a>
+        <a href="https://www.facebook.com/rishabh.agrawal.7798" target="_blank"
+          ><i class="fab fa-facebook-f icon"></i
+        ></a>
+      </div>
+    </footer>
 
-<!-- Blogs Section -->
-<a name="blogs"><h1 class="headings">My Top Blogs</h1></a><br>
-<div class="container-fluid text-center">
-  <div class="row blogs-section">
-    
-  </div>    
-</div><br>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<div class="arrow"></div>
-<footer class="container-fluid">
-  <div class="about">
-    <h1 class="sub-headings">About Me</h1>
-    <p class="details">I am a self-Taught Software Developer from India who has worked on several different projects for solving real-life problems. I have worked as a Freelancer and created web templates and software for my clients. I often contribute to the open-source community and have learned the best practices to write clean code.</p>
-  </div>
-  <div class="contact">
-    <h1 class="sub-headings">Contact</h1>
-    <p class="details">You can reach me up at <a href="mailto:rishabha.1999@gmail.com?subject=Hello%20Rishabh" target="_top">rishabha.1999@gmail.com</a></p>
-    <a href="https://www.linkedin.com/in/rishabh-agrawal-48511967" target="_blank"><i class="fab fa-linkedin-in icon"></i></a>
-    <a href="https://medium.com/@codedrishabh" target="_blank"><i class="fab fa-medium-m icon"></i></a>
-    <a href="https://www.hackerrank.com/rishabha_1999" target="_blank"><i class="fab fa-hackerrank icon"></i></a>
-    <a href="https://www.facebook.com/rishabh.agrawal.7798" target="_blank"><i class="fab fa-facebook-f icon"></i></a>
-  </div>
-</footer>
+    <script src="./js/particles.min.js"></script>
+    <script src="./js/app.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-<script src="./js/particles.min.js"></script>
-<script src="./js/app.js"></script>
-
-<script src="./js/sections/live_projects.js"></script>
-<script src="./js/sections/freelance_work.js"></script>
-<script src="./js/sections/skills.js"></script>
-<script src="./js/sections/blogs.js"></script>
-<script src="./js/style.js"></script>
-
-</body>
+    <script src="./js/sections/live_projects.js"></script>
+    <script src="./js/sections/freelance_work.js"></script>
+    <script src="./js/sections/skills.js"></script>
+    <script src="./js/sections/blogs.js"></script>
+    <script src="./js/style.js"></script>
+  </body>
 </html>
