Added YouTube link

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
         <a href="https://www.facebook.com/rishabh.agrawal.7798" target="_blank"
           ><i class="fab fa-facebook-f icon"></i
         ></a>
+        <a href="https://www.youtube.com/channel/UCJSRPpG5M3CJ3_vCioXUzLg" target="_blank"
+          ><i class="fab fa-youtube icon"></i></a>
       </div>
     </footer>
 
