Changed the entire UI colors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
           </button>
           <a href=""
-            ><img src="./images/Current DP.jpg" class="nav-img" alt=""
+            ><img src="./images/profile.jpeg" class="nav-img" alt=""
           /></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -132,7 +132,7 @@
       <div class="about">
         <h1 class="sub-headings">About Me</h1>
         <p class="details">
-          I am a self-Taught Software Developer from India who has worked on
+          I am a self-taught Software Developer from India who has worked on
           several different projects for solving real-life problems. I have
           worked as a Freelancer and created web templates and software for my
           clients. I often contribute to the open-source community and have
