--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rishabh's Portfolio</title>
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#3C2F1D" />
+    <meta name="theme-color" content="#0A2463" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
