Added and styled icons.

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
           href="https://github.com/techcatchers"
           class="intro-links"
           target="_blank"
-          >My GitHub Profile</a
+          ><i class="fab fa-github top-icon"></i> My GitHub Profile</a
         >
         <a
           href="http://bit.ly/rishabh-cv-may19"
           class="intro-links"
           target="_blank"
-          >My CV (Drive Link)</a
+          ><i class="fab fa-google-drive top-icon"></i>My CV (Drive Link)</a
         >
       </div>
     </div>
@@ -149,6 +149,10 @@
             >rishabha.1999@gmail.com</a
           >
         </p>
+        <a
+          href="https://github.com/techcatchers"
+          target="_blank"
+          ><i class="fab fa-github icon"></i></a>
         <a
           href="https://www.linkedin.com/in/rishabh-agrawal-48511967"
           target="_blank"
