Minor text focus improvements.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div id="particles-js"></div>
       <div class="container text-center">
         <h1>Hello, I'm Rishabh Agrawal.</h1>
-        <h3>I'm a self-taught full-stack web developer from India.</h3>
+        <h3>I'm a Self-taught Full Stack Developer from India.</h3>
       </div>
       <div class="text-center links">
         <a
@@ -132,7 +132,7 @@
       <div class="about">
         <h1 class="sub-headings">About Me</h1>
         <p class="details">
-          I am a self-taught Software Developer from India who has worked on
+          I am a self-taught full stack developer from India who has worked on
           several different projects for solving real-life problems. I have
           worked as a Freelancer and created web templates and software for my
           clients. I often contribute to the open-source community and have
