--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     <!-- Skills Section -->
     <a name="skills"><h1 class="headings">My Skills</h1></a><br />
     <div class="container-fluid text-center">
-      <div class="row skills-section"></div>
+      <div class="row skills-section">
+        <img src="./images/skills/skills.png" alt="rishabh-agrawal-skills">
+      </div>
     </div>
     <br />
 
