chore: text updates

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             <span class="icon-bar"></span>
           </button>
           <a href=""
-            ><img src="./images/profile.jpeg" class="nav-img" alt=""
+            ><img
+              src="https://avatars.githubusercontent.com/u/18071667?v=4"
+              class="nav-img"
+              alt=""
           /></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -51,8 +54,11 @@
     <div class="jumbotron">
       <div id="particles-js"></div>
       <div class="container text-center">
-        <h1>Hello, I'm Rishabh Agrawal.</h1>
-        <h3>I'm a Self-taught Full Stack Developer from India.</h3>
+        <h1>Hey, I'm Rishabh Agrawal</h1>
+        <h3>
+          A passionate engineer with over 6 years of full-stack industry
+          experience
+        </h3>
       </div>
       <div class="text-center links">
         <a
@@ -114,10 +120,10 @@
     <br />
 
     <!-- Skills Section -->
-    <a name="skills"><h1 class="headings">My Skills</h1></a><br />
+    <a name="skills"><h1 class="headings">My Skills (Outdated - Refer CV)</h1></a><br />
     <div class="container-fluid text-center">
       <div class="row skills-section">
-        <img src="./images/skills/skills.png" alt="rishabh-agrawal-skills">
+        <img src="./images/skills/skills.png" alt="rishabh-agrawal-skills" />
       </div>
     </div>
     <br />
@@ -134,27 +140,27 @@
       <div class="about">
         <h1 class="sub-headings">About Me</h1>
         <p class="details">
-          I am a self-taught full stack developer from India who has worked on
-          several different projects for solving real-life problems. I have
-          worked as a Freelancer and created web templates and software for my
-          clients. I often contribute to the open-source community and have
-          learned the best practices to write clean code.
+          I've got over 6 years of full-stack industry experience. Built 10s of
+          products from scratch and managed some at scale, writing code since
+          1.5 decades and fiddling with computers from more than 2 decades now.
+          My work has primarily been in eCommerce, Digital Asset Management
+          (Images & Videos), & Healthcare, with a decent exposure in AI
+          pipelines recently. If this sounds cool, then feel free to reach out.
         </p>
       </div>
       <div class="contact">
         <h1 class="sub-headings">Contact</h1>
         <p class="details">
-          You can reach me up at
+          You can reach out to me at
           <a
-            href="mailto:rishabha.1999@gmail.com?subject=Hello%20Rishabh"
+            href="mailto:rishabhBuilds@gmail.com?subject=Hello%20Rishabh"
             target="_top"
-            >rishabha.1999@gmail.com</a
+            >rishabhBuilds@gmail.com</a
           >
         </p>
-        <a
-          href="https://github.com/techcatchers"
-          target="_blank"
-          ><i class="fab fa-github icon"></i></a>
+        <a href="https://github.com/techcatchers" target="_blank"
+          ><i class="fab fa-github icon"></i
+        ></a>
         <a
           href="https://www.linkedin.com/in/rishabh-agrawal-48511967"
           target="_blank"
@@ -169,8 +175,11 @@
         <a href="https://www.facebook.com/rishabh.agrawal.7798" target="_blank"
           ><i class="fab fa-facebook-f icon"></i
         ></a>
-        <a href="https://www.youtube.com/channel/UCJSRPpG5M3CJ3_vCioXUzLg" target="_blank"
-          ><i class="fab fa-youtube icon"></i></a>
+        <a
+          href="https://www.youtube.com/channel/UCJSRPpG5M3CJ3_vCioXUzLg"
+          target="_blank"
+          ><i class="fab fa-youtube icon"></i
+        ></a>
       </div>
     </footer>
 
