--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <br />
 
     <!-- Skills Section -->
-    <a name="skills"><h1 class="headings">My Skills (Outdated - Refer CV)</h1></a><br />
+    <a name="skills"><h1 class="headings">My Skills</h1></a><br />
     <div class="container-fluid text-center">
       <div class="row skills-section">
         <img src="./images/skills/skills.png" alt="rishabh-agrawal-skills" />
