chore: adds SEO content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <meta name="theme-color" content="#0A2463" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp, etc.) -->
+    <meta property="og:title" content="Rishabh's Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore Rishabh's portfolio, skills, and projects."
+    />
+    <meta
+      property="og:image"
+      content="https://techcatchers.github.io/Portfolio/images/skills/skills.png"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://techcatchers.github.io/Portfolio/"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rishabh's Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Explore Rishabh's portfolio, skills, and projects."
+    />
+    <meta
+      name="twitter:image"
+      content="https://techcatchers.github.io/Portfolio/images/skills/skills.png"
+    />
+
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link
       rel="stylesheet"
